# nexport

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: inform-build.js
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  info.txt  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  db.rs  elevation.rs  firewall.rs  lib.rs  main.rs  models.rs  ports.rs  settings.rs  watcher.rs
src/components/: DashboardView.tsx  GeoBadge.tsx  HistoryView.tsx  PortTable.tsx  ProcessDetailsPanel.tsx  SettingsPanel.tsx  Toolbar.tsx
src/lib/: api.ts  dialog.ts  geo.ts  i18n.ts  notify.ts  pin.ts  platform.ts  search.ts  sound.ts
src/store/: favorites.ts  filters.ts  settings.ts  table.ts
