[package]
name = "nexport"
version = "0.6.4"
description = "Visualiser et libérer les ports ouverts"
authors = ["Nexus"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "nexport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# v0.2 — enumeration réelle des ports + résolution PID/nom
netstat2 = "0.9"
sysinfo  = "0.32"

# v0.5 — watcher périodique et persistance favoris/historique
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# v0.3 — élévation administrateur (UAC sous Windows)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

# v0.3 — élévation administrateur (pkexec sous Linux)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
